15.Kubernetes 其他组件/1.cert-manager/ingress-kube-root-ca-issuer.yaml
# ingress-kube-root-ca-issuer.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: kube-root-ca-issuer # 引用 kube-root-ca-issuer 
spec:
  ingressClassName: cilium
  rules:
    - host: http-dump.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: http-dump
                port:
                  number: 80
  tls:
    - hosts:
        - http-dump.example.com
      secretName: http-dump-cert   # 引用 secret
