15.Kubernetes 其他组件/1.cert-manager/private-ca-issuer.yaml
# private-ca-issuer.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: private-ca-issuer # 使用 private-ca-issuer 
spec:
  ingressClassName: nginx
  rules:
    - host: http-dump.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: http-dump
                port:
                  number: 80
  tls:
    - hosts:
        - http-dump.example.com
      secretName: http-dump-cert
